<resources>
    <string name="app_name">The Movie</string>
    <string name="genres">Genres</string>
    <string name="discover_movie">Discover Movie</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="poster">Poster</string>
    <string name="retry">Retry</string>
    <string name="results_not_loaded">Results not loaded</string>
    <string name="no_results">No results found</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="overview">Overview</string>
    <string name="backdrop">Backdrop</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="no_reviews">No reviews found</string>
    <string name="trailer">Trailer</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play">Play</string>
    <string name="failed_initialize">"Failed to initialize youtube player"</string>
</resources>